--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,17 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 123
-      POSTGRES_DB: bookmarks
+      POSTGRES_DB: nest
+    networks:
+      - tomy
+  test-db:
+    image: postgres:13
+    ports:
+      - 5435:5432
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: 123
+      POSTGRES_DB: nest
     networks:
       - tomy
 networks:
